# db-query-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: docker.yml
frontend/: index.html
scripts/: seed_demo_db.py
src/db_query_agent/: __init__.py  agent.py  api.py  config.py  executor.py  formatters.py  schema.py
tests/: test_api.py  test_executor.py  test_formatters.py  test_schema.py
